Header bar redesign
New scalable header bar design which should scale nicely with height
and width changes by collapsing several elements (putting them into
popups and overflow menus).  The height scaling of the header is
similar to Elisa, where it will use the regular background color when
fully collapsed.
Titles are clickable and will open the relevant pages.  Images are also
clickable and that will open a fullscreen view.
This new design also exposes volume controls both for desktop and mobile
layout.

BUG: 457846
CCBUG: 458331

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -219,7 +219,8 @@ if(ANDROID)
         kaccounts-nextcloud
         clock
         viewimage
-        media-playback-start-cloud
+        player-volume-muted
+        player-volume
     )
 else()
     target_link_libraries(kasts PRIVATE Qt::Widgets)
