Changes for android build with qt-5.15.8

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -74,6 +74,10 @@ android {
     defaultConfig {
         minSdkVersion qtMinSdkVersion
         targetSdkVersion qtTargetSdkVersion
+        applicationId "org.kde.kasts"
+        namespace "org.kde.kasts"
+        versionCode timestamp
+        versionName projectVersionFull
         manifestPlaceholders = [versionName: projectVersionFull, versionCode: timestamp]
     }
 
