Implement systray icon, menu and settings.
BUG: 462470

--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -15,7 +15,8 @@
         "--device=dri",
         "--socket=pulseaudio",
         "--own-name=org.mpris.MediaPlayer2.kasts",
-        "--talk-name=org.freedesktop.secrets"
+        "--talk-name=org.freedesktop.secrets",
+        "--talk-name=org.kde.StatusNotifierWatcher"
     ],
     "cleanup": [
         "/include",
