--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,13 @@
 
 cmake_minimum_required(VERSION 3.16)
 
-set(PROJECT_VERSION "23.01")
-project(Kasts VERSION ${PROJECT_VERSION})
+# KDE Applications version, managed by release script.
+set(RELEASE_SERVICE_VERSION_MAJOR "23")
+set(RELEASE_SERVICE_VERSION_MINOR "03")
+set(RELEASE_SERVICE_VERSION_MICRO "70")
+set(RELEASE_SERVICE_VERSION "${RELEASE_SERVICE_VERSION_MAJOR}.${RELEASE_SERVICE_VERSION_MINOR}.${RELEASE_SERVICE_VERSION_MICRO}")
+
+project(kasts VERSION ${RELEASE_SERVICE_VERSION})
 
 # be c++17 compliant
 set(CMAKE_CXX_STANDARD 17)
