cmake: Add an option for the gstreamer audio backend
Otherwise it'll become a so-called automagic dependency with no control
over including support for it or not, other than having it installed on
the system or not.
For LIBVLC CMAKE_DISABLE_FIND_PACKAGE can be used, but for
pkg_check_modules no such things exits and we need an explicit option.

--- a/src/kmediasession/CMakeLists.txt
+++ b/src/kmediasession/CMakeLists.txt
@@ -18,9 +18,12 @@ set_package_properties(LIBVLC PROPERTIES
     URL "https://www.videolan.org/vlc/libvlc.html"
     TYPE RECOMMENDED)
 
-find_package(PkgConfig REQUIRED) #finding pkg-config is a helper tool
-#using pkg-config to getting Gstreamer
-pkg_check_modules(GSTREAMER IMPORTED_TARGET gstreamer-1.0)
+option(BUILD_GSTREAMER_BACKEND "Build gstreamer audio backend" ON)
+if (BUILD_GSTREAMER_BACKEND)
+    find_package(PkgConfig REQUIRED) #finding pkg-config is a helper tool
+    #using pkg-config to getting Gstreamer
+    pkg_check_modules(GSTREAMER IMPORTED_TARGET gstreamer-1.0)
+endif()
 
 #########################################
 
