Update Tobias' mail address

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 # SPDX-FileCopyrightText: 2020 Nicolas Fella <nicolas.fella@gmx.de>
-# SPDX-FileCopyrightText: 2020 Tobias Fella <fella@posteo.de>
+# SPDX-FileCopyrightText: 2020 Tobias Fella <tobias.fella@kde.org>
 # SPDX-License-Identifier: BSD-2-Clause
 
 include:
