Use FolderDialog for non-flatpak builds
Flatpaks have a problem with FolderDialog from labs: it never returns a
path.  Therefore Kasts was - up to now - using FileDialog from QtQuick1.
However, this was causing problems on Android and Windows.  Now we only
use QtQuick1 FileDialog for flatpak and FolderDialog everywhere else.

CCBUG: 458331

--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -159,6 +159,9 @@
                     "type": "file",
                     "path": ".patches/run_kasts.sh"
                 }
+            ],
+            "config-opts": [
+                "-DKASTS_FLATPAK=ON"
             ]
         }
     ]
