--- a/src/solidextras/CMakeLists.txt
+++ b/src/solidextras/CMakeLists.txt
@@ -22,7 +22,7 @@ endif()
 add_library(KastsSolidExtras ${solidextras_srcs})
 generate_export_header(KastsSolidExtras BASE_NAME KastsSolidExtras)
 
-if (TARGET KF5::NetworkManagerQt)
+if (TARGET KF${KF_MAJOR_VERSION}::NetworkManagerQt)
     set(HAVE_NM ON)
 endif()
 configure_file(config-solid-extras.h.in ${CMAKE_CURRENT_BINARY_DIR}/config-solid-extras.h)
@@ -36,8 +36,8 @@ if (ANDROID)
     endif()
 else ()
     target_link_libraries(KastsSolidExtras PRIVATE Qt::DBus)
-    if (TARGET KF5::NetworkManagerQt)
-        target_link_libraries(KastsSolidExtras PRIVATE KF5::NetworkManagerQt)
+    if (TARGET KF${KF_MAJOR_VERSION}::NetworkManagerQt)
+        target_link_libraries(KastsSolidExtras PRIVATE KF${KF_MAJOR_VERSION}::NetworkManagerQt)
     endif()
 endif()
 
