--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: BSD-2-Clause
 
 Dependencies:
-- 'on': ['@all']
+- 'on': ['Linux/Qt5', 'FreeBSD/Qt5', 'Windows/Qt5', 'Android/Qt5']
   'require':
     'frameworks/extra-cmake-modules': '@stable'
     'frameworks/kcoreaddons': '@stable'
@@ -12,6 +12,20 @@ Dependencies:
     'frameworks/kconfig': '@stable'
     'frameworks/threadweaver': '@stable'
     'libraries/kirigami-addons': '@stable'
+    'third-party/qtkeychain': '@latest'
+    'third-party/taglib': '@latest'
+
+- 'on': ['Linux/Qt6', 'FreeBSD/Qt6', 'Windows/Qt6', 'Android/Qt6']
+  'require':
+    'frameworks/extra-cmake-modules': '@latest-kf6'
+    'frameworks/kcoreaddons': '@latest-kf6'
+    'frameworks/kirigami': '@latest-kf6'
+    'frameworks/syndication': '@latest-kf6'
+    'frameworks/ki18n': '@latest-kf6'
+    'frameworks/kconfig': '@latest-kf6'
+    'frameworks/threadweaver': '@latest-kf6'
+# disable for now since this would pull in kf5 versions of kirigami and ki18n
+#    'libraries/kirigami-addons': '@stable'
     'third-party/qtkeychain': '@latest'
     'third-party/taglib': '@latest'
 
