Load custom icons through fallbackSearchPaths
This fixes automatic icon recoloring for dark themes.

BUG: 469567

(cherry-picked from commit f69366f6fda1c220d31ea71aab78e7db1846356a)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -238,6 +238,7 @@ if(ANDROID)
         player-volume-muted
         player-volume
         application-exit
+        media-playback-cloud
     )
 else()
     target_link_libraries(kasts PRIVATE Qt::Widgets)
