Implement backend to allow Feed list sort and search
The current list of things to sort on (ascending and descending), includes:
- unplayed episodes
- new episodes
- favorite episodes
- title (alphabetical)
For the first three categories, the value of the sort quantity will be shown
in the upper right corner of the delegate.

BUG: 471012
CCBUG: 459885

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -267,6 +267,8 @@ if(ANDROID)
         view-sort
         view-sort-descending
         view-sort-ascending
+        view-sort-descending-name
+        view-sort-ascending-name
     )
 else()
     target_link_libraries(kasts PRIVATE Qt::Widgets)
