--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -11,6 +11,7 @@ Dependencies:
     'frameworks/ki18n': '@latest-kf6'
     'frameworks/kconfig': '@latest-kf6'
     'frameworks/threadweaver': '@latest-kf6'
+    'frameworks/kcolorscheme': '@latest-kf6'
     'libraries/kirigami-addons': '@latest-kf6'
     'third-party/qtkeychain': '@latest'
 
