--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -9,7 +9,7 @@ apps:
     kasts:
         # extensions:
         # - kde-neon
-        common-id: org.kde.kasts.desktop
+        common-id: org.kde.kasts
         desktop: usr/share/applications/org.kde.kasts.desktop
         command: usr/bin/kasts
         plugs:
@@ -24,6 +24,7 @@ apps:
         - network
         - network-bind
         - network-manager-observe
+        - alsa
         command-chain:
         - snap/command-chain/desktop-launch
 assumes:
@@ -40,10 +41,10 @@ plugs:
         interface: content
         target: $SNAP/data-dir/sounds
         default-provider: gtk-common-themes
-    kf5-5-110-qt-5-15-11-core22:
-        content: kf5-5-110-qt-5-15-11-core22-all
+    kf5-5-111-qt-5-15-11-core22:
+        content: kf5-5-111-qt-5-15-11-core22-all
         interface: content
-        default-provider: kf5-5-110-qt-5-15-11-core22
+        default-provider: kf5-5-111-qt-5-15-11-core22
         target: $SNAP/kf5
 environment:
     SNAP_DESKTOP_RUNTIME: $SNAP/kf5
@@ -52,7 +53,7 @@ environment:
     QT_QUICK_CONTROLS_STYLE: org.kde.desktop
     GST_PLUGIN_PATH: "$SNAP/usr/lib/$CRAFT_ARCH_TRIPLET/gstreamer-1.0"
     GST_PLUGIN_SYSTEM_PATH: "$SNAP/usr/lib/$CRAFT_ARCH_TRIPLET/gstreamer-1.0"
-    GST_PLUGIN_SCANNER: "$SNAP/usr/lib/$CRAFT_ARCH_TRIPLET/gstreamer1.0/gstreamer-1.0/gst-plugin-scanner"
+    GST_PLUGIN_SCANNER: "$SNAP/kf5/usr/lib/$CRAFT_ARCH_TRIPLET/gstreamer1.0/gstreamer-1.0/gst-plugin-scanner"
 hooks:
     configure:
         plugs:
@@ -66,10 +67,12 @@ layout:
         bind: "$SNAP/usr/lib/$CRAFT_ARCH_TRIPLET/alsa-lib"
     "/usr/share/alsa":
         bind: "$SNAP/usr/share/alsa"
+    "/etc/alsa/conf.d":
+        bind: "$SNAP/etc/alsa/conf.d"
 slots:
     session-dbus-interface:
         interface: dbus
-        name: org.kde.kasts
+        name: org.mpris.MediaPlayer2.kasts
         bus: session
 package-repositories:
 -   type: apt
@@ -86,18 +89,18 @@ parts:
         source-type: local
         plugin: make
         make-parameters:
-        - PLATFORM_PLUG=kf5-5-110-qt-5-15-11-core22
+        - PLATFORM_PLUG=kf5-5-111-qt-5-15-11-core22
         build-snaps:
-        - kf5-5-110-qt-5-15-11-core22-sdk
+        - kf5-5-111-qt-5-15-11-core22-sdk
         build-environment:
         - &id001
-            PATH: /snap/kf5-5-110-qt-5-15-11-core22-sdk/current/usr/bin${PATH:+:$PATH}
+            PATH: /snap/kf5-5-111-qt-5-15-11-core22-sdk/current/usr/bin${PATH:+:$PATH}
         - &id002
-            XDG_DATA_DIRS: $CRAFT_STAGE/usr/share:/snap/kf5-5-110-qt-5-15-11-core22-sdk/current/usr/share:/usr/share${XDG_DATA_DIRS:+:$XDG_DATA_DIRS}
+            XDG_DATA_DIRS: $CRAFT_STAGE/usr/share:/snap/kf5-5-111-qt-5-15-11-core22-sdk/current/usr/share:/usr/share${XDG_DATA_DIRS:+:$XDG_DATA_DIRS}
         - &id003
-            XDG_CONFIG_HOME: $CRAFT_STAGE/etc/xdg:/snap/kf5-5-110-qt-5-15-11-core22-sdk/current/etc/xdg:/etc/xdg${XDG_CONFIG_HOME:+:$XDG_CONFIG_HOME}
+            XDG_CONFIG_HOME: $CRAFT_STAGE/etc/xdg:/snap/kf5-5-111-qt-5-15-11-core22-sdk/current/etc/xdg:/etc/xdg${XDG_CONFIG_HOME:+:$XDG_CONFIG_HOME}
         - &id004
-            CRAFT_CMAKE_ARGS: -DCMAKE_FIND_ROOT_PATH=/snap/kf5-5-110-qt-5-15-11-core22-sdk/current${CRAFT_CMAKE_ARGS:+:$CRAFT_CMAKE_ARGS}
+            CRAFT_CMAKE_ARGS: -DCMAKE_FIND_ROOT_PATH=/snap/kf5-5-111-qt-5-15-11-core22-sdk/current${CRAFT_CMAKE_ARGS:+:$CRAFT_CMAKE_ARGS}
     kasts:
         after:
         - kde-neon
@@ -113,17 +116,19 @@ parts:
         - qtdeclarative5-dev
         - qtmultimedia5-dev
         - qtquickcontrols2-5-dev
+        - libvlc-dev
+        - libsecret-1-dev
         stage-packages:
+        - gstreamer1.0-alsa
+        - gstreamer1.0-plugins-base
+        - gstreamer1.0-plugins-bad
+        - gstreamer1.0-plugins-good
+        - gstreamer1.0-plugins-ugly
+        - gstreamer1.0-libav
         - libasound2
         - libasound2-data
         - libasound2-plugins
-        - phonon4qt5
-        - gstreamer1.0-alsa
-        - gstreamer1.0-pulseaudio
-        - gstreamer1.0-plugins-good
-        - gstreamer1.0-plugins-bad
-        - gstreamer1.0-plugins-ugly
-        - phonon4qt5-backend-gstreamer
+        - libasound2-plugins-extra
         - oxygen-sounds
         - libkf5syndication5
         - kirigami-addons-data
@@ -136,9 +141,9 @@ parts:
         - libtag1v5
         - libqt5keychain1
         - libkf5networkmanagerqt6
-        - libgstreamer1.0-0
         - libvlc5
         - libnm0
+        - libsecret-1-0
         source: .
         source-type: local
         cmake-parameters:
@@ -147,7 +152,7 @@ parts:
         - "-DENABLE_TESTING=OFF"
         - "-DBUILD_TESTING=OFF"
         - "-DKDE_SKIP_TEST_SETTINGS=ON"
-        - "-DCMAKE_FIND_ROOT_PATH=$CRAFT_STAGE\\;/snap/kf5-5-110-qt-5-15-11-core22-sdk/current"
+        - "-DCMAKE_FIND_ROOT_PATH=$CRAFT_STAGE\\;/snap/kf5-5-111-qt-5-15-11-core22-sdk/current"
         - "-DKDE_INSTALL_PLUGINDIR=/usr/lib/$CRAFT_ARCH_TRIPLET/qt5/plugins/"
         prime:
         - "-usr/lib/*/cmake/*"
