--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,5 +11,4 @@ include:
       - /gitlab-templates/android-qt6.yml
       - /gitlab-templates/windows-qt6.yml
       #- /gitlab-templates/flatpak.yml
-      #- /gitlab-templates/craft-android-apks.yml
-
+      - /gitlab-templates/craft-android-qt6-apks.yml
