snapcraft: Prepare 23.08.3 Release.
Add gnome-keyring for libsecret.

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -142,6 +142,8 @@ parts:
         - libvlc5
         - libnm0
         - libsecret-1-0
+        - mpg123
+        - gnome-keyring
         source: .
         source-type: local
         cmake-parameters:
