Adapt apk building to Qt6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ include(KDECMakeSettings)
 include(KDECompilerSettings NO_POLICY_SCOPE)
 include(ECMAddAppIcon)
 include(ECMDeprecationSettings)
+include(ECMAddAndroidApk)
 if(NOT ANDROID)
     include(KDEClangFormat)
 endif()
