--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # SPDX-FileCopyrightText: 2020 Tobias Fella <tobias.fella@kde.org>
 # SPDX-License-Identifier: CC0-1.0
 
-build/
+build*/
 .kdev4/
 CMakeLists.txt.user
 kasts.kdev4
