--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ include:
       - /gitlab-templates/windows.yml
       - /gitlab-templates/flatpak.yml
       - /gitlab-templates/craft-android-apks.yml
+      - /gitlab-templates/craft-windows-x86-64.yml
       # - /gitlab-templates/linux-qt6.yml
       # - /gitlab-templates/freebsd-qt6.yml
       # - /gitlab-templates/android-qt6.yml
