--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,5 +10,5 @@ include:
       - /gitlab-templates/freebsd-qt6.yml
       - /gitlab-templates/android-qt6.yml
       - /gitlab-templates/windows-qt6.yml
-      #- /gitlab-templates/flatpak.yml
+      - /gitlab-templates/flatpak.yml
       - /gitlab-templates/craft-android-qt6-apks.yml
